Fix CORS config for Render deployment